fix: doc visible

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -690,7 +690,7 @@ a {
 }
 
 .cm-editor {
-  height: 600px;
+  height: 540px;
 }
 
 .docs-hidden {
